fixed the white space on css, now when there's no user it shows 404 page

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -14,6 +14,10 @@
   --primary-white: #E8E7E4;
 }
 
+html, body {
+  height:100%;
+  overscroll-behavior: none;
+}
 
 body {
   font-family: Inter;
